fix validation in ebook composer (new errors display after inputs), trying from class validator to zod (new only create book schema), migrate backend to strick mode
