# openapi.yaml
@@ -909,7 +909,7 @@ components:
           example: email
           description: user email
         socialId:
-          type: string
+          type: object
           example: socialId
           description: user social id
         password:
@@ -1111,7 +1111,7 @@ components:
           items:
             type: string
         text:
-          type: string
+          type: object
           example: text
           description: review text
         rating:
@@ -1121,7 +1121,6 @@ components:
       required:
         - id
         - tags
-        - text
         - rating
     FullBook:
       type: object
@@ -1228,6 +1227,89 @@ components:
         - canLoadMore
         - totalPages
         - data
+    CreateBookDto:
+      type: object
+      properties:
+        title:
+          type: string
+        author:
+          type: string
+        description:
+          type: string
+          maxLength: 1000
+          minLength: 10
+        ebook:
+          type: array
+          items:
+            type: object
+            properties:
+              title:
+                type: string
+                maxLength: 100
+                minLength: 3
+                required: true
+              id:
+                type: number
+                minimum: 1
+                required: true
+              chapters:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    id:
+                      type: number
+                      minimum: 1
+                      required: true
+                    name:
+                      type: string
+                      required: true
+                    text:
+                      type: string
+                      required: true
+                  required:
+                    - id
+                    - name
+                    - text
+                required: true
+            required:
+              - title
+              - id
+              - chapters
+          minItems: 1
+        rating:
+          type: number
+          minimum: 0
+          exclusiveMinimum: true
+        picture:
+          type: string
+        genres:
+          type: array
+          items:
+            type: object
+            properties:
+              slug:
+                type: string
+                required: true
+              name:
+                type: string
+                required: true
+              icon:
+                type: string
+                required: true
+            required:
+              - slug
+              - name
+              - icon
+          minItems: 1
+      required:
+        - title
+        - author
+        - description
+        - ebook
+        - rating
+        - picture
+        - genres
     PayloadChapter:
       type: object
       properties:
@@ -1256,45 +1338,6 @@ components:
         - id
         - title
         - chapters
-    CreateBookDto:
-      type: object
-      properties:
-        title:
-          type: string
-          example: title
-          description: book title
-        picture:
-          type: string
-          example: picture
-          description: book picture
-        author:
-          type: string
-          example: author
-          description: book author
-        description:
-          type: string
-          example: description
-          description: book description
-        rating:
-          type: number
-          example: 5
-          description: book rating
-        genres:
-          type: array
-          items:
-            $ref: "#/components/schemas/ShortGenre"
-        ebook:
-          type: array
-          items:
-            $ref: "#/components/schemas/PayloadEBook"
-      required:
-        - title
-        - picture
-        - author
-        - description
-        - rating
-        - genres
-        - ebook
     UpdateBookDto:
       type: object
       properties:
